--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 </head>
 
 <body>
-<div class="container">
-    <h1>Die Hütte brennt, Führung wurde bestellt und nix geliefert? Wo ist eigentlich Olaf?</h1>
+<header>
+    <h1>Die Hütte brennt, Führung wurde bestellt und nix geliefert? Und wo ist eigentlich Olaf?</h1>
     <img src="images/confused-john-travolta.gif" alt="Ja, wo ist er denn" class="img-hero">
-</div>
+</header>
+<main>
+    <a href="https://olaf-scholz.spd.de/aktuelles/detail/news/interview-von-olaf-scholz-fuer-den-tagesspiegel-am-sonntag/03/09/2021/"
+       target="_blank">Wer bei mir Führung bestellt, bekommt sie auch …</a>.
+    <p>So hat sich der Chef der deutschen Regierung mal geäußert. Tja, leider hält er anscheinend nicht so viel von seinen eigenen Motivationsparolen und verschwindet irgendwo. Keine Ahnung, wo der Kapitän der MS Deutschland sich gerade befindet. Bei sachdienlichen Hinweisen bitte die Bundestagsgeschäftsstelle in Berlin benachrichtigen. Ich glaube, sie vermissen ihn dort auch schon. Die Vermutung ist, dass er sich entweder im Standby befindet oder noch an der Ladesäule hängt ...</p>
+</main>
+<footer>
+    Made with a 😉 in the Bay Area, © 2024
+</footer>
 </body>
 
 </html>
