--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main>
     <a href="https://olaf-scholz.spd.de/aktuelles/detail/news/interview-von-olaf-scholz-fuer-den-tagesspiegel-am-sonntag/03/09/2021/"
        target="_blank">Wer bei mir Führung bestellt, bekommt sie auch …</a>.
-    <p>So hat sich der Chef der deutschen Regierung mal geäußert. Tja, leider hält er anscheinend nicht so viel von seinen eigenen Motivationsparolen und verschwindet irgendwo. Keine Ahnung, wo der Kapitän der MS Deutschland sich gerade befindet. Bei sachdienlichen Hinweisen bitte die Bundestagsgeschäftsstelle in Berlin benachrichtigen. Ich glaube, sie vermissen ihn dort auch schon. Die Vermutung ist, dass er sich entweder im Standby befindet oder noch an der Ladesäule hängt ...</p>
+    <p>So hat sich der Chef der deutschen Regierung mal geäußert. Tja, leider hält er anscheinend nicht so viel von seinen eigenen Motivationsparolen und verschwindet irgendwo. Keine Ahnung, wo der Kapitän der MS Deutschland sich gerade befindet. Bei sachdienlichen Hinweisen bitte die Bundestagsgeschäftsstelle in Berlin benachrichtigen. Ich glaube, sie vermissen ihn dort auch schon. Die Vermutung ist, dass er noch im Standby an der Ladesäule hängt ...</p>
 </main>
 <footer>
     Made with a 😉 in the Bay Area, © 2024
